--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: ./services/web
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
-      - ./services/web/app/:/usr/src/app/
+      - ./services/web/:/usr/src/app/
     ports:
       - 8000:8000
     env_file:
