--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,15 @@ services:
       - 8000:8000
     env_file:
       - ./.env.dev
+
+  db:
+    image: postgres:12.0-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    environment:
+      - POSTGRES_USER=cmuser
+      - POSTGRES_PASSWORD=cm
+      - POSTGRES_DB=cm
+
+volumes:
+  postgres_data:
