--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - 8000:8000
     env_file:
       - ./.env.dev
+    depends_on:
+      - db
 
   db:
     image: postgres:12.0-alpine
@@ -19,6 +21,15 @@ services:
       - POSTGRES_USER=cmuser
       - POSTGRES_PASSWORD=cm
       - POSTGRES_DB=cm
+
+  scrapyd:
+    build: ./services/scrapyd
+    image: scrapyd
+    ports:
+      - 6800:6800
+    depends_on:
+      - db
+    restart: always
 
 volumes:
   postgres_data:
