Enabled cron for scrapyd

--- a/services/web/Dockerfile
+++ b/services/web/Dockerfile
@@ -23,6 +23,9 @@ RUN pip install -r requirements.txt
 
 # copy entrypoint.sh
 COPY ./entrypoint.sh .
+COPY ./cron-d .
+
+RUN /usr/bin/crontab cron-d
 
 # copy project
 COPY . .
