--- a/services/scrapyd/Dockerfile
+++ b/services/scrapyd/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.8
+FROM python:3.8.3
 
 WORKDIR /usr/src/app
 
@@ -9,9 +9,15 @@ RUN pip install --upgrade pip
 COPY ./requirements.txt ./
 RUN pip install -r requirements.txt
 
+RUN apt-get update
+RUN apt-get install -y cron
+
 COPY scrapyd.sh ./
 RUN chmod 0755 /usr/src/app/scrapyd.sh
 
 COPY ./scrapyd.conf ./scraping  ./
+
+COPY ./cron-d ./
+RUN crontab cron-d
 
 ENTRYPOINT ["/usr/src/app/scrapyd.sh"]
