--- a/services/web/requirements.txt
+++ b/services/web/requirements.txt
@@ -5,6 +5,7 @@ django-bootstrap4==2.2.0
 django-cleanup==5.0.0
 django-debug-toolbar==2.2
 django==3.1.1
+dj-database-url==0.5.0
 pillow==7.2.0
 pytz==2020.1
 six==1.15.0
