--- a/heroku.yml
+++ b/heroku.yml
@@ -4,7 +4,7 @@ setup:
       as: DATABASE
 build:
   docker:
-    web: services/web/Dockerfile.prod
+    web: services/web/Dockerfile.prod.heroku
 run:
   web: gunicorn config.wsgi:application --bind 0.0.0.0:$PORT
 release:
