--- a/services/web/Dockerfile.prod.heroku
+++ b/services/web/Dockerfile.prod.heroku
@@ -50,7 +50,7 @@ RUN mkdir $APP_HOME/mediafiles
 WORKDIR $APP_HOME
 
 # install dependencies(you need libjpeg for pillow)
-RUN apk update && apk add libpq libjpeg
+RUN apk update && apk add libpq libjpeg curl
 COPY --from=builder /usr/src/app/wheels /wheels
 COPY --from=builder /usr/src/app/requirements.txt .
 RUN pip install --no-cache /wheels/*
