--- a/services/web/Dockerfile.prod
+++ b/services/web/Dockerfile.prod
@@ -64,11 +64,8 @@ COPY . $APP_HOME
 # chown all the files to the app user
 RUN chown -R app:app $APP_HOME
 
-# collect static files
-# RUN python manage.py collectstatic --noinput
-
 # change to the app user
 USER app
 
 # run entrypoint.prod.sh
-# ENTRYPOINT ["/home/app/web/entrypoint.prod.sh"]
+ENTRYPOINT ["/home/app/web/entrypoint.prod.sh"]
