--- a/services/web/Dockerfile.prod.heroku
+++ b/services/web/Dockerfile.prod.heroku
@@ -11,7 +11,7 @@ WORKDIR /usr/src/app
 # set environment variables
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
-ENV DEBUG 0
+# ENV DEBUG 0
 
 # install psycopg2 dependencies
 RUN apk update \
