--- a/services/web/requirements.txt
+++ b/services/web/requirements.txt
@@ -11,7 +11,7 @@ pytz==2020.1
 six==1.15.0
 soupsieve==2.0.1
 sqlparse==0.3.1
-psycopg2-binary==2.8.5
+psycopg2==2.8.6
 gunicorn==20.0.4
 whitenoise==5.2.0
-django-heroku
+django-heroku==0.3.1
