--- a/services/web/Dockerfile.prod.heroku
+++ b/services/web/Dockerfile.prod.heroku
@@ -1,65 +1,29 @@
-###########
-# BUILDER #
-###########
-
 # pull official base image
-FROM python:3.8.3-alpine as builder
+FROM python:3.8-alpine
 
 # set work directory
-WORKDIR /usr/src/app
+WORKDIR /app
 
 # set environment variables
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
-# ENV DEBUG 0
+ENV DEBUG 0
 
-# install psycopg2 dependencies
+# install psycopg2
 RUN apk update \
-  && apk add --virtual build-tools gcc python3-dev musl-dev jpeg-dev zlib-dev \
-  && apk add postgresql-dev libjpeg
-
-# lint
-RUN pip install --upgrade pip
-
-COPY . .
+    && apk add --virtual build-deps gcc python3-dev musl-dev jpeg-dev zlib-dev \
+    && apk add postgresql-dev libjpeg \
+    && pip install psycopg2 \
+    && pip install pillow \
+    && apk del build-deps
 
 # install dependencies
 COPY ./requirements.txt .
-RUN pip wheel --no-cache-dir --no-deps --wheel-dir /usr/src/app/wheels -r requirements.txt
-
-
-#########
-# FINAL #
-#########
-
-# pull official base image
-FROM python:3.8.3-alpine
-
-# create directory for the app user
-RUN mkdir -p /home/app
-
-# create the app user
-RUN addgroup -S app && adduser -S app -G app
-
-# create the appropriate directories
-ENV HOME=/home/app
-ENV APP_HOME=/home/app/web
-RUN mkdir $APP_HOME
-# RUN mkdir $APP_HOME/staticfiles
-# RUN mkdir $APP_HOME/mediafiles
-WORKDIR $APP_HOME
-
-# install dependencies(you need libjpeg for pillow)
-RUN apk update && apk add libpq libjpeg curl
-COPY --from=builder /usr/src/app/wheels /wheels
-COPY --from=builder /usr/src/app/requirements.txt .
-RUN pip install --no-cache /wheels/*
+RUN pip install -r requirements.txt
 
 # copy project
-COPY . $APP_HOME
+COPY . .
 
-# chown all the files to the app user
-RUN chown -R app:app $APP_HOME
-
-# change to the app user
-USER app
+# add and run as non-root user
+RUN adduser -D myuser
+USER myuser
