--- a/services/web/Dockerfile.prod.heroku
+++ b/services/web/Dockerfile.prod.heroku
@@ -61,6 +61,8 @@ COPY ./entrypoint.prod.sh $APP_HOME
 # copy project
 COPY . $APP_HOME
 
+RUN python manage.py collectstatic --noinput
+
 # chown all the files to the app user
 RUN chown -R app:app $APP_HOME
 
