--- a/heroku.yml
+++ b/heroku.yml
@@ -1,7 +1,10 @@
 build:
   docker:
     web: services/web/Dockerfile.prod.heroku
+    scrapyd: services/scrapyd/Dockerfile
 run:
   web: gunicorn config.wsgi:application --bind 0.0.0.0:$PORT
+  scrapyd: scrapyd
 release:
   image: web
+  image: scrapyd
