--- a/heroku.yml
+++ b/heroku.yml
@@ -2,9 +2,10 @@ build:
   docker:
     web: services/web/Dockerfile.prod.heroku
     scrapyd: services/scrapyd/Dockerfile.heroku
+release:
+  image: scrapyd
+  command:
+    - scrapyd-deploy
 run:
   web: gunicorn config.wsgi:application --bind 0.0.0.0:$PORT
   scrapyd: scrapyd
-release:
-  image: web
-  image: scrapyd
