--- a/services/scrapyd/scraping/scrapy.cfg
+++ b/services/scrapyd/scraping/scrapy.cfg
@@ -7,5 +7,5 @@
 default = scraping.settings
 
 [deploy]
-url = http://localhost:6800/
+url = http://clothesmanager.herokuapp.com:6800/
 project = scraping
