--- a/services/scrapyd/scraping/scrapy.cfg
+++ b/services/scrapyd/scraping/scrapy.cfg
@@ -6,6 +6,9 @@
 [settings]
 default = scraping.settings
 
+[scrapyd]
+application = scrapy_heroku.app.application
+
 [deploy]
-url = http://clothesmanager.herokuapp.com:6800/
+url = http://clothesmanager.herokuapp.com:80/
 project = scraping
