--- a/services/scrapyd/Dockerfile.heroku
+++ b/services/scrapyd/Dockerfile.heroku
@@ -5,7 +5,8 @@ WORKDIR /usr/src/app
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
-RUN pip install --upgrade pip
+RUN pip install --upgrade pip \
+  && python3 -m ensurepip --upgrade
 COPY ./requirements.txt ./
 RUN pip install -r requirements.txt
 
