--- a/services/scrapyd/Dockerfile.heroku
+++ b/services/scrapyd/Dockerfile.heroku
@@ -6,7 +6,7 @@ ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
 RUN pip install --upgrade pip \
-  && python3 -m ensurepip --upgrade
+  && python -m ensurepip --upgrade
 COPY ./requirements.txt ./
 RUN pip install -r requirements.txt
 
