--- a/services/scrapyd/scraping/scrapy.cfg
+++ b/services/scrapyd/scraping/scrapy.cfg
@@ -6,9 +6,6 @@
 [settings]
 default = scraping.settings
 
-[scrapyd]
-application = scrapy_heroku.app.application
-
 [deploy]
-url = http://clothesmanager.herokuapp.com:80/
+url = http://clothesmanager.herokuapp.com:$PORT
 project = scraping
