--- a/services/scrapyd/Dockerfile.heroku
+++ b/services/scrapyd/Dockerfile.heroku
@@ -5,8 +5,7 @@ WORKDIR /usr/src/app
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
-RUN pip install --upgrade pip \
-  && python -m ensurepip --upgrade
+RUN pip install --upgrade pip
 COPY ./requirements.txt ./
 RUN pip install -r requirements.txt
 
