--- a/services/web/requirements.txt
+++ b/services/web/requirements.txt
@@ -1,16 +1,54 @@
 -i https://pypi.org/simple
+amqp==5.0.1
 asgiref==3.2.10
-beautifulsoup4==4.9.1
-django-bootstrap4==2.2.0
-django-cleanup==5.0.0
-django-debug-toolbar==2.2
-django==3.1.1
+attrs==20.2.0
+automat==20.2.0
+beautifulsoup4==4.9.2
+billiard==3.6.3.0
+celery==5.0.0
+cffi==1.14.3
+click-didyoumean==0.0.3
+click-repl==0.1.6
+click==7.1.2
+constantly==15.1.0
+cryptography==3.1.1
+cssselect==1.1.0
 dj-database-url==0.5.0
-pillow==7.2.0
-pytz==2020.1
-six==1.15.0
-soupsieve==2.0.1
-sqlparse==0.3.1
-psycopg2==2.8.6
+django-bootstrap4==2.2.0
+django-cleanup==5.1.0
+django-debug-toolbar==3.1.1
+django==3.1.1
 gunicorn==20.0.4
+hyperlink==20.0.1
+idna==2.10
+incremental==17.5.0
+itemadapter==0.1.0
+itemloaders==1.0.3
+jmespath==0.10.0
+kombu==5.0.2
+lxml==4.5.2
+parsel==1.6.0
+pillow==7.2.0
+prompt-toolkit==3.0.7
+protego==0.1.16
+psycopg2-binary==2.8.6
+pyasn1-modules==0.2.8
+pyasn1==0.4.8
+pycparser==2.20
+pydispatcher==2.0.5
+pyhamcrest==2.0.2
+pyopenssl==19.1.0
+pytz==2020.1
+queuelib==1.5.0
+redis==3.5.3
+scrapy==2.3.0
+service-identity==18.1.0
+six==1.15.0
+soupsieve==2.0.1 ; python_version >= '3.0'
+sqlparse==0.3.1
+twisted==20.3.0
+vine==5.0.0
+w3lib==1.22.0
+wcwidth==0.2.5
 whitenoise==5.2.0
+zope.interface==5.1.0
