--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
     build:
       context: ./services/web
       dockerfile: "Dockerfile.celery"
-    command: celery -A config worker -l INFO
+    command: celery -A config worker -B -l INFO
     env_file:
       - ./.env.dev
     depends_on:
