--- a/services/web/requirements.txt
+++ b/services/web/requirements.txt
@@ -17,6 +17,7 @@ dj-database-url==0.5.0
 django-bootstrap4==2.2.0
 django-cleanup==5.1.0
 django-debug-toolbar==3.1.1
+django-redis-cache==2.1.3
 django==3.1.2
 gunicorn==20.0.4
 hyperlink==20.0.1
