--- a/services/web/Dockerfile.celery
+++ b/services/web/Dockerfile.celery
@@ -12,7 +12,7 @@ ENV PYTHONUNBUFFERED 1
 # install zlib, a required dependency for pillow and postgres
 # gcc python3-dev jpeg-dev zlib-dev for pillow
 RUN apk update \
- && apk add --virtual build-tools gcc python3-dev musl-dev jpeg-dev zlib-dev libffi-dev libxml2-dev libxslt-dev \
+ && apk add --virtual build-tools gcc python3-dev musl-dev jpeg-dev zlib-dev build-base libffi-dev libxml2-dev libxslt-dev \
  && apk add postgresql-dev libjpeg
 
 
@@ -21,11 +21,5 @@ RUN pip install --upgrade pip
 COPY ./requirements.txt .
 RUN pip install -r requirements.txt
 
-# copy entrypoint.sh
-COPY ./entrypoint.sh .
-
 # copy project
 COPY . .
-
-# run entrypoint.sh
-ENTRYPOINT ["/usr/src/app/entrypoint.sh"]
