--- a/services/web/requirements.txt
+++ b/services/web/requirements.txt
@@ -3,13 +3,14 @@ amqp==5.0.1
 asgiref==3.2.10
 attrs==20.2.0
 automat==20.2.0
-beautifulsoup4==4.9.2
+beautifulsoup4==4.9.3
 billiard==3.6.3.0
 celery==5.0.0
 cffi==1.14.3
 click-didyoumean==0.0.3
 click-repl==0.1.6
 click==7.1.2
+colorgram-py==1.2.0
 constantly==15.1.0
 cryptography==3.1.1
 cssselect==1.1.0
@@ -46,10 +47,10 @@ scrapy==2.3.0
 service-identity==18.1.0
 six==1.15.0
 soupsieve==2.0.1 ; python_version >= '3.0'
-sqlparse==0.3.1
+sqlparse==0.4.1
 twisted==20.3.0
 vine==5.0.0
 w3lib==1.22.0
 wcwidth==0.2.5
 whitenoise==5.2.0
-zope.interface==5.1.1
+zope.interface==5.1.2
