--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,15 @@ django-bootstrap4 = "*"
 pillow = "*"
 django-debug-toolbar = "*"
 django-cleanup = "*"
+dj-database-url = "*"
+whitenoise = "*"
+psycopg2-binary = "*"
+gunicorn = "*"
+celery = "*"
+redis = "*"
+scrapy = "*"
+django-redis-cache = "*"
+colorgram-py = "*"
 
 [requires]
 python_version = "3.8"
