--- a/services/web/Dockerfile.celery
+++ b/services/web/Dockerfile.celery
@@ -13,7 +13,7 @@ ENV PYTHONUNBUFFERED 1
 # gcc python3-dev jpeg-dev zlib-dev for pillow
 RUN apk update \
  && apk add --virtual build-tools gcc python3-dev musl-dev jpeg-dev zlib-dev build-base libffi-dev libxml2-dev libxslt-dev \
- && apk add postgresql-dev libjpeg
+ && apk add postgresql-dev libjpeg curl
 
 
 # install dependencies
