--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,16 +39,16 @@ services:
       - dev-db
       - redis
 
-  # dev-scrapyd:
-  #   build: ./services/scrapyd
-  #   image: scrapyd
-  #   ports:
-  #     - 6800:6800
-  #   environment:
-  #     - POSTGRES_URL=postgresql://cmuser:cm@dev-db:5432/cm
-  #   depends_on:
-  #     - dev-db
-  #   restart: always
+  dev-scrapyd:
+    build: ./services/scrapyd
+    image: scrapyd
+    ports:
+      - 6800:6800
+    environment:
+      - POSTGRES_URL=postgresql://cmuser:cm@dev-db:5432/cm
+    depends_on:
+      - dev-db
+    restart: always
 
 volumes:
   postgres_data:
