Add: selenium /requirements.txt

--- a/Pipfile
+++ b/Pipfile
@@ -21,6 +21,7 @@ scrapy = "*"
 django-redis-cache = "*"
 colorgram-py = "*"
 factory-boy = "*"
+selenium = "*"
 
 [requires]
 python_version = "3.8"
