--- a/services/web/requirements.txt
+++ b/services/web/requirements.txt
@@ -1,37 +1,39 @@
 -i https://pypi.org/simple
 amqp==5.0.1
-asgiref==3.2.10
-attrs==20.2.0
+asgiref==3.3.0
+attrs==20.3.0
 automat==20.2.0
 beautifulsoup4==4.9.3
 billiard==3.6.3.0
-celery==5.0.0
+celery==5.0.2
 cffi==1.14.3
 click-didyoumean==0.0.3
 click-repl==0.1.6
 click==7.1.2
 colorgram-py==1.2.0
 constantly==15.1.0
-cryptography==3.1.1
+cryptography==3.2.1
 cssselect==1.1.0
 dj-database-url==0.5.0
-django-bootstrap4==2.2.0
+django-bootstrap4==2.3.1
 django-cleanup==5.1.0
 django-debug-toolbar==3.1.1
-django-redis-cache==2.1.3
-django==3.1.2
+django-redis-cache==3.0.0
+django==3.1.3
+factory-boy==3.1.0
+faker==4.14.2
 gunicorn==20.0.4
 hyperlink==20.0.1
 idna==2.10
 incremental==17.5.0
-itemadapter==0.1.1
+itemadapter==0.2.0
 itemloaders==1.0.3
 jmespath==0.10.0
 kombu==5.0.2
-lxml==4.5.2
+lxml==4.6.1 ; platform_python_implementation == 'CPython'
 parsel==1.6.0
-pillow==7.2.0
-prompt-toolkit==3.0.7
+pillow==8.0.1
+prompt-toolkit==3.0.8
 protego==0.1.16
 psycopg2-binary==2.8.6
 pyasn1-modules==0.2.8
@@ -40,17 +42,21 @@ pycparser==2.20
 pydispatcher==2.0.5
 pyhamcrest==2.0.2
 pyopenssl==19.1.0
-pytz==2020.1
+python-dateutil==2.8.1
+pytz==2020.4
 queuelib==1.5.0
 redis==3.5.3
-scrapy==2.3.0
+scrapy==2.4.0
+selenium==3.141.0
 service-identity==18.1.0
 six==1.15.0
 soupsieve==2.0.1 ; python_version >= '3.0'
 sqlparse==0.4.1
+text-unidecode==1.3
 twisted==20.3.0
+urllib3==1.25.11
 vine==5.0.0
 w3lib==1.22.0
 wcwidth==0.2.5
 whitenoise==5.2.0
-zope.interface==5.1.2
+zope.interface==5.2.0
