Installed chromedriver in Docker (#11)
* Installed factory_boy

* Add: selenium /requirements.txt

* Test root url

* Delete: scrapyd in docker-compose.prod

* Build: chromedriver

* Connect to chromedriver container

* Makefile

* Passed home page test

--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,8 @@ redis = "*"
 scrapy = "*"
 django-redis-cache = "*"
 colorgram-py = "*"
+factory-boy = "*"
+selenium = "*"
 
 [requires]
 python_version = "3.8"
